--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
 <!-- HEADER -->
-<header class="header">
+<header class="header hide">
     <div class="container-header container">
     <nav class="nav-menu">
     <a href="./index.html" class="logo-web">Web<span class="logo-studio">Studio</span>
@@ -33,14 +33,14 @@
 </header>
 <!-- Main content -->
 <main>
- <section class="hero">
+ <section class="hero hide">
    <div class="container">
       <h1 class="title">Effective Solutions
       for Your Business</h1>
       <button type="button" class="button-in-hero">Order Service</button>
   </div>
     </section>
- <section class="under-hero">
+ <section class="under-hero hide">
    <div class="container">
     <h2 class="visually-hidden">Criteria</h2>
     <ul class="list-criteria">
@@ -242,7 +242,7 @@
   </div>
 </section>
 <!-- Our Portfolio -->
-<section class="our-portfolio-section">
+<section class="our-portfolio-section hide">
   <div class="container">
     <h2 class="team">Our Portfolio</h2>
     <ul class="list-of-offers">
@@ -341,7 +341,7 @@
 </section>
 </main>
 <!-- Footer -->
-<footer class="footer">
+<footer class="footer hide">
   <div class="container-footer container">
     <div class="box-footer-one">
       <a href="./index.html" class="logo-web-footer">Web<span class="logo-studio-footer">Studio</span></a>
@@ -396,7 +396,9 @@
  </div>
  
 </footer>
+    
 <!-- Modal window -->
+<!--
   <div class="backdrop is-open">
     <div class="modal">
          <button class="modal-btn" type="button" aria-label="modal close button">
@@ -477,6 +479,6 @@
       </form>
 
     </div>
-  </div>
+  </div> -->
 </body>
 </html>
