--- a/index.html
+++ b/index.html
@@ -12,11 +12,16 @@
 </head>
 <body>
 <!-- HEADER -->
-<header class="header hide">
+<header class="header">
     <div class="container-header container">
     <nav class="nav-menu">
     <a href="./index.html" class="logo-web">Web<span class="logo-studio">Studio</span>
     </a>
+    <button class="menu-btn" type="button" aria-label="open-menu-button">
+      <svg class="menu-btn-icon" width="24" height="24">
+      <use href="./images/icons.svg#icon-heroicons-solid_menu"></use>
+     </svg>
+   </button>
   <ul class="list-nav">
     <li><a href="./index.html" class="nav active">Studio</a></li>
     <li><a href="" class="nav">Portfolio</a></li>
@@ -33,14 +38,14 @@
 </header>
 <!-- Main content -->
 <main>
- <section class="hero hide">
-   <div class="container">
+ <section class="hero">
+   <div class="hero-container container">
       <h1 class="title">Effective Solutions
       for Your Business</h1>
       <button type="button" class="button-in-hero">Order Service</button>
   </div>
     </section>
- <section class="under-hero hide">
+ <section class="under-hero">
    <div class="container">
     <h2 class="visually-hidden">Criteria</h2>
     <ul class="list-criteria">
@@ -242,7 +247,7 @@
   </div>
 </section>
 <!-- Our Portfolio -->
-<section class="our-portfolio-section hide">
+<section class="our-portfolio-section">
   <div class="container">
     <h2 class="team">Our Portfolio</h2>
     <ul class="list-of-offers">
@@ -257,8 +262,8 @@
                  </p>
           </div>
           <div class="our-offers">
-              <h3 class="item">Banking App</h3>
-              <p class="text">App</p>
+              <h3 class="item-portfolio">Banking App</h3>
+              <p class="text-portfolio">App</p>
           </div>
         </li>
         <li class="items-list-of-offers">
@@ -272,8 +277,8 @@
                </p>
             </div>
             <div class="our-offers">
-               <h3 class="item">Cashless Payment</h3>
-               <p class="text">Marketing</p>
+               <h3 class="item-portfolio">Cashless Payment</h3>
+               <p class="text-portfolio">Marketing</p>
             </div>
         </li>
         <li class="items-list-of-offers">
@@ -287,8 +292,8 @@
               </p>
           </div>
             <div class="our-offers">
-               <h3 class="item">Meditation App</h3>
-               <p class="text">App</p>
+               <h3 class="item-portfolio">Meditation App</h3>
+               <p class="text-portfolio">App</p>
             </div>
         </li>
         <li class="items-list-of-offers">
@@ -302,8 +307,8 @@
              </p>
           </div>
              <div class="our-offers">
-                <h3 class="item">Taxi Service</h3>
-                <p class="text">Marketing</p>
+                <h3 class="item-portfolio">Taxi Service</h3>
+                <p class="text-portfolio">Marketing</p>
              </div>
         </li>
         <li class="items-list-of-offers">
@@ -317,8 +322,8 @@
                </p>
            </div>
             <div class="our-offers">
-              <h3 class="item">Screen Illustrations</h3>
-              <p class="text">Design</p>
+              <h3 class="item-portfolio">Screen Illustrations</h3>
+              <p class="text-portfolio">Design</p>
           </div>
         </li>
         <li class="items-list-of-offers">
@@ -332,8 +337,8 @@
                </p>
            </div>
              <div class="our-offers">
-                <h3 class="item">Online Courses</h3>
-                <p class="text">Marketing</p>
+                <h3 class="item-portfolio">Online Courses</h3>
+                <p class="text-portfolio">Marketing</p>
              </div>
         </li>
     </ul>
@@ -341,7 +346,7 @@
 </section>
 </main>
 <!-- Footer -->
-<footer class="footer hide">
+<footer class="footer">
   <div class="container-footer container">
     <div class="box-footer-one">
       <a href="./index.html" class="logo-web-footer">Web<span class="logo-studio-footer">Studio</span></a>
@@ -480,5 +485,65 @@
 
     </div>
   </div> -->
+  <!-- Mobile menu -->
+  <!--div has is-open -->
+  <div class="mobile-menu">
+    <button class="menu-btn" type="button">
+      <svg class="menu-btn-icon" width="8" height="8">
+       <use href="./images/icons.svg#icon-close-black-x"></use>
+      </svg>
+    </button>
+    <ul class="mobile-menu-list">
+      <li class="mobile-menu-item">
+        <a class="mobile-menu-link current" href="" >Studio</a>
+      </li>
+      <li class="mobile-menu-item">
+        <a class="mobile-menu-link" href="" >Portfolio</a>
+      </li>
+      <li class="mobile-menu-item">
+        <a class="mobile-menu-link" href="" >Contacts</a>
+      </li>
+    </ul>
+    <ul class="mobile-menu-contacts">
+      <li class="mobile-menu-item">
+        <a class="mobile-menu-contact accent" href="tel:+110001111111">+11 (000) 111-11-11</a>
+      </li>
+      <li class="mobile-menu-item">
+        <a class="mobile-menu-contact" href="mailto:info@devstudio.com">info@devstudio.com</a>
+      </li>
+    </ul>
+
+
+    <ul class="mobile-menu-socials pages-social-icons-footer">
+      <li class="social-icons">
+        <a href="" class="icons-hover link-icons">
+          <svg class="fill-icon" width="24" height="24">
+            <use href="./images/icons.svg#icon-instagram"></use>
+          </svg>
+        </a>
+      </li>
+      <li class="social-icons">
+        <a href="" class="icons-hover link-icons">
+          <svg class="fill-icon" width="24" height="24">
+            <use href="./images/icons.svg#icon-twitter"></use>
+          </svg>
+        </a>
+      </li>
+      <li class="social-icons">
+        <a href="" class="icons-hover link-icons">
+        <svg class="fill-icon" width="24" height="24">
+          <use href="./images/icons.svg#icon-facebook"></use>
+        </svg>
+      </a>
+    </li>
+      <li class="social-icons">
+        <a href="" class="icons-hover link-icons">
+          <svg class="fill-icon" width="24" height="24">
+            <use href="./images/icons.svg#icon-linkedin"></use>
+          </svg>
+        </a>
+      </li>
+    </ul>
+  </div>
 </body>
 </html>
